--- a/todo.txt
+++ b/todo.txt
@@ -3,11 +3,11 @@ TO DO FOR GAME (By Monday, 6pm):
 - Get Music (Henry?)
 - Design a narrative 
 - Draw the tiles (Henry?)
-- Pick which tiles are being used. (?)
 - Pick which scenarios to do (?)
-- Optimize / Limit Torches (?)
+- Optimize Performance.
 - Design Levels (Chris?)
 - Sound effects: Torches lit, torches extinguished, critters rescued, critters die. (Henry? Chris?)
-- Redesign code to support multiple types of critters. (Sean)
-- Program opening screen, level select.
-- Make restart / Next Level button function. (Sean)
+- Program opening screen
+- Incorperate Animations.
+
+- System for limiting what kind of lights you can use?
